{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 63,
  "lineage": "9cb9c9df-beeb-080d-81f4-94babcc9f015",
  "resources": [
    {
      "module": "module.FEMI_VPC",
      "mode": "managed",
      "type": "aws_instance",
      "name": "femitestinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07fb7b1409c393c50",
            "arn": "arn:aws:ec2:ca-central-1:261420510317:instance/i-0b8216b14a6f02c3e",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b8216b14a6f02c3e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "femikey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0659a488580e0263e",
            "private_dns": "ip-10-0-2-132.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07be668f413d25e15",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01871b4f4d963f576",
            "tags": {
              "Name": "femitestinstance_0"
            },
            "tags_all": {
              "Name": "femitestinstance_0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08cfb8a2b517de13d"
            ]
          },
          "dependencies": [
            "module.FEMI_VPC.aws_key_pair.femikey",
            "module.FEMI_VPC.aws_security_group.instance_sg",
            "module.FEMI_VPC.aws_subnet.pri_subn",
            "module.FEMI_VPC.aws_vpc.coachmeplusvpc",
            "module.FEMI_VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07fb7b1409c393c50",
            "arn": "arn:aws:ec2:ca-central-1:261420510317:instance/i-0fbfb5894059e26e0",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fbfb5894059e26e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "femikey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a4f84c25e5cc6e28",
            "private_dns": "ip-10-0-2-177.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-011d163585973c240",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01871b4f4d963f576",
            "tags": {
              "Name": "femitestinstance_1"
            },
            "tags_all": {
              "Name": "femitestinstance_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08cfb8a2b517de13d"
            ]
          },
          "dependencies": [
            "module.FEMI_VPC.aws_key_pair.femikey",
            "module.FEMI_VPC.aws_security_group.instance_sg",
            "module.FEMI_VPC.aws_subnet.pri_subn",
            "module.FEMI_VPC.aws_vpc.coachmeplusvpc",
            "module.FEMI_VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07fb7b1409c393c50",
            "arn": "arn:aws:ec2:ca-central-1:261420510317:instance/i-0f7514ff660abfa95",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f7514ff660abfa95",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "femikey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a563ad3a8fa3cb4c",
            "private_dns": "ip-10-0-2-139.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a53e5665f6c47c45",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01871b4f4d963f576",
            "tags": {
              "Name": "femitestinstance_2"
            },
            "tags_all": {
              "Name": "femitestinstance_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08cfb8a2b517de13d"
            ]
          },
          "dependencies": [
            "module.FEMI_VPC.aws_key_pair.femikey",
            "module.FEMI_VPC.aws_security_group.instance_sg",
            "module.FEMI_VPC.aws_subnet.pri_subn",
            "module.FEMI_VPC.aws_vpc.coachmeplusvpc",
            "module.FEMI_VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07fb7b1409c393c50",
            "arn": "arn:aws:ec2:ca-central-1:261420510317:instance/i-00b4d975a84f5128d",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00b4d975a84f5128d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "femikey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08b057bab8d5a16e6",
            "private_dns": "ip-10-0-2-221.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ad6f20ec0a076832",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01871b4f4d963f576",
            "tags": {
              "Name": "femitestinstance_3"
            },
            "tags_all": {
              "Name": "femitestinstance_3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08cfb8a2b517de13d"
            ]
          },
          "dependencies": [
            "module.FEMI_VPC.aws_key_pair.femikey",
            "module.FEMI_VPC.aws_security_group.instance_sg",
            "module.FEMI_VPC.aws_subnet.pri_subn",
            "module.FEMI_VPC.aws_vpc.coachmeplusvpc",
            "module.FEMI_VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07fb7b1409c393c50",
            "arn": "arn:aws:ec2:ca-central-1:261420510317:instance/i-086e533aa17b7f4e1",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-086e533aa17b7f4e1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "femikey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-085cd32b275a39d1b",
            "private_dns": "ip-10-0-2-233.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03e56b9da6a4175c0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01871b4f4d963f576",
            "tags": {
              "Name": "femitestinstance_4"
            },
            "tags_all": {
              "Name": "femitestinstance_4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08cfb8a2b517de13d"
            ]
          },
          "dependencies": [
            "module.FEMI_VPC.aws_key_pair.femikey",
            "module.FEMI_VPC.aws_security_group.instance_sg",
            "module.FEMI_VPC.aws_subnet.pri_subn",
            "module.FEMI_VPC.aws_vpc.coachmeplusvpc",
            "module.FEMI_VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.FEMI_VPC",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:261420510317:security-group/sg-05d2b5e222201abb3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d2b5e222201abb3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240804211915632700000001",
            "name_prefix": "terraform-",
            "owner_id": "261420510317",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_sg"
            },
            "tags_all": {
              "Name": "alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd2a025616acec24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.FEMI_VPC.aws_vpc.coachmeplusvpc"
          ]
        }
      ]
    },
    {
      "module": "module.FEMI_VPC",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:261420510317:security-group/sg-08cfb8a2b517de13d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08cfb8a2b517de13d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240804221905907600000001",
            "name_prefix": "terraform-",
            "owner_id": "261420510317",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "instance_sg"
            },
            "tags_all": {
              "Name": "instance_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd2a025616acec24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.FEMI_VPC.aws_vpc.coachmeplusvpc"
          ]
        }
      ]
    },
    {
      "module": "module.FEMI_VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_subn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:261420510317:subnet/subnet-01871b4f4d963f576",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01871b4f4d963f576",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "261420510317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri_subn"
            },
            "tags_all": {
              "Name": "pri_subn"
            },
            "vpc_id": "vpc-0bd2a025616acec24"
          },
          "dependencies": [
            "module.FEMI_VPC.aws_vpc.coachmeplusvpc",
            "module.FEMI_VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.FEMI_VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:261420510317:subnet/subnet-09de1b23ce7fa30ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09de1b23ce7fa30ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "261420510317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_subn"
            },
            "tags_all": {
              "Name": "pub_subn"
            },
            "vpc_id": "vpc-0bd2a025616acec24"
          },
          "dependencies": [
            "module.FEMI_VPC.aws_vpc.coachmeplusvpc",
            "module.FEMI_VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.FEMI_VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "coachmeplusvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:261420510317:vpc/vpc-0bd2a025616acec24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fb988f1f007cc17b",
            "default_route_table_id": "rtb-0d311dea78415b2d2",
            "default_security_group_id": "sg-04e4b8f49a79f6f43",
            "dhcp_options_id": "dopt-0d93b6fa08fcc62c9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bd2a025616acec24",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d311dea78415b2d2",
            "owner_id": "261420510317",
            "tags": {
              "Name": "coachmeplusvpc"
            },
            "tags_all": {
              "Name": "coachmeplusvpc"
            }
          }
        }
      ]
    }
  ]
}